# DoomFire

./: .gitignore  CMakeLists.txt  readme.md
cmake/: CPM.cmake
src/: DemoFire.cpp  DemoFire.h  main.cpp  main.h
src/effects/: DoomFire.cpp  DoomFire.h  DoomFire2D.cpp  DoomFire2D.h  colorutils.h  hsvconv.h
src/libs/: ColorUtils.cpp  ColorUtils.h  DefaultValues.h  HsvUtils.h  InterpolationFunctions.cpp  InterpolationFunctions.h  ParseArguments.h
